--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div class="floatbox floatbox_column2">
 				<div class="floatbox__item">
 					<p>
-						Responsive UX template-is the modern and responsive html a template. It was developed by means of <a href="http://stas-melnikov.ru/responsive_elements/index.html">Responsive framework</a>. The template responds all
+						Responsive UX template-is the modern and responsive html a template. It was developed by means of <a href="http://stas-melnikov.ru/responsive_elements">Responsive framework</a>. The template responds all
 						the modern of the requirement. In case of creation were used next technologies were used: HTML5, CSS3. Also in it
 						the responsive grid, css3 animation and many other components are included. It is prepared documentation is qualitative,
 						which will help you to use it.
