--- a/index.html
+++ b/index.html
@@ -258,11 +258,7 @@
 		<div id="map"></div>
 	</div>
 	<footer class="footer">
-		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-			<input type="hidden" name="cmd" value="_s-xclick">
-			<input type="hidden" name="hosted_button_id" value="NN4W5TKX2S4AW">
-			<button style="display: block;float: left; margin: 0 15px 10px 0;padding: 8px 15px; border:1px solid #fff; color: #fff;border-radius: 5px;cursor: pointer;background-color: rgba(0,0,0,0)">Donate</button>
-		</form>
+		<a href="https://www.paypal.me/melnik909" target="blank" style="display: block;float: left; margin: 0 15px 10px 0;padding: 8px 15px; border:1px solid #fff; color: #fff;border-radius: 5px;cursor: pointer;background-color: rgba(0,0,0,0)">Donate</a>
 		<div class="social footer__left-column">
 			<div class="yashare-auto-init" data-yashareL10n="en" data-yashareType="small" data-yashareQuickServices="facebook,twitter,gplus" data-yashareTheme="counter"></div>
 		</div>
