--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 </head>
 <body class="preloader_active">
-	<div class="header" id="home">
-		<header class="container">
+	<header class="header" id="home">
+		<div class="container">
 			<h1 class="logo">Responsive UX <span class="logo__item">template</span></h1>
 			<nav id="menu" class="menu">	
 				<div class="menu__icon">&nbsp;</div>
@@ -35,10 +35,10 @@
 					</li>
 				</ul>
 			</nav>	
-		</header>
-	</div>
+		</div>
+	</header>
 	<div class="fullwidth-banner wrapper wrapper_decor">
-		<div class="container">
+		<div class="container content">
 			<img class="fullwidth-banner__img" src="core/images/html5.png" alt="html5 icon" />
 			<div class="fullwidth-banner__inner">
 				I've seen the FUTURE<br> It's in my BROWSER
@@ -46,7 +46,7 @@
 		</div>
 	</div>	
 	<section id="about" class="about wrapper">
-		<div class="container">
+		<div class="container content">
 			<h3 class="title">About</h3>
 			<div class="floatbox floatbox_column2">
 				<div class="floatbox__item">
@@ -74,88 +74,88 @@
 			</div>
 		</div>	
 	</section>
-	<section id="projects" class="wrapper list-works">
-		<div class="container">
+	<section id="projects" class="wrapper">
+		<div class="container content">
 			<h2 class="title">Projects</h2>
-			<div class="list-works display-ib-container display-ib-container_4columns">
-				<a href="http://stas-melnikov.ru/the-animated-flask-css3/" target="blank" class="list-works__item display-ib-container__item">
+			<div class="list-works display-ib-box display-ib-box_4columns">
+				<a href="http://stas-melnikov.ru/the-animated-flask-css3/" target="blank" class="list-works__item display-ib-box__item">
 					<img src="http://stas-melnikov.ru/cliparts/notebook_640x640.jpg" class="list-works__img" alt="Work" />
 					<div class="list-works__overlay"> 
-						<span class="name-project">The animated flask</span>
+						<span class="list-works__name-project">The animated flask</span>
 					</div>
 				</a>
-				<a href="http://stas-melnikov.ru/animated_alert/" target="blank" class="list-works__item display-ib-container__item">
+				<a href="http://stas-melnikov.ru/animated_alert/" target="blank" class="list-works__item display-ib-box__item">
 					<img src="http://stas-melnikov.ru/cliparts/notebook5_640x640.jpg" class="list-works__img" alt="Work" />
 					<div class="list-works__overlay"> 
-						<span class="name-project">Animated alerts</span>
+						<span class="list-works__name-project">Animated alerts</span>
 					</div>
 				</a>
-				<a href="http://stas-melnikov.ru/hovers/" target="blank" class="list-works__item display-ib-container__item">
+				<a href="http://stas-melnikov.ru/hovers/" target="blank" class="list-works__item display-ib-box__item">
 					<img src="http://stas-melnikov.ru/cliparts/notebook3_640x640.jpg" class="list-works__img" alt="Work" />
 					<div class="list-works__overlay"> 
-						<span class="name-project">Hovers Effects</span>
+						<span class="list-works__name-project">Hovers Effects</span>
 					</div>
 				</a>
-				<a href="http://stas-melnikov.ru/preloaders/" target="blank" class="list-works__item display-ib-container__item">
+				<a href="http://stas-melnikov.ru/preloaders/" target="blank" class="list-works__item display-ib-box__item">
 					<img src="http://stas-melnikov.ru/cliparts/notebook2_640x640.jpg" class="list-works__img" alt="Work" />
 					<div class="list-works__overlay"> 
-						<span class="name-project">Preloaders</span>
+						<span class="list-works__name-project">Preloaders</span>
 					</div>
 				</a>
-				<a href="http://stas-melnikov.ru/webgl_generator_3dmodels/" target="blank" class="list-works__item display-ib-container__item">
+				<a href="http://stas-melnikov.ru/webgl_generator_3dmodels/" target="blank" class="list-works__item display-ib-box__item">
 					<img src="http://stas-melnikov.ru/cliparts/notebook_640x640.jpg" class="list-works__img" alt="Work" />
 					<div class="list-works__overlay"> 
-						<span class="name-project">WebGL Generator of Models</span>
+						<span class="list-works__name-project">WebGL Generator of Models</span>
 					</div>
 				</a>
-				<a href="http://stas-melnikov.ru/3d_panorama/" target="blank" class="list-works__item display-ib-container__item">
+				<a href="http://stas-melnikov.ru/3d_panorama/" target="blank" class="list-works__item display-ib-box__item">
 					<img src="http://stas-melnikov.ru/cliparts/notebook5_640x640.jpg" class="list-works__img" alt="Work" />
 					<div class="list-works__overlay"> 
-						<span class="name-project">3d Panorams</span>
+						<span class="list-works__name-project">3d Panorams</span>
 					</div>
 				</a>
-				<a href="http://stas-melnikov.ru/material_table/" target="blank" class="list-works__item display-ib-container__item">
+				<a href="http://stas-melnikov.ru/material_table/" target="blank" class="list-works__item display-ib-box__item">
 					<img src="http://stas-melnikov.ru/cliparts/notebook2_640x640.jpg" class="list-works__img" alt="Work" />
 					<div class="list-works__overlay"> 
-						<span class="name-project">Material responsive table</span>
+						<span class="list-works__name-project">Material responsive table</span>
 					</div>
 				</a>
-				<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="list-works__item display-ib-container__item">
+				<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="list-works__item display-ib-box__item">
 					<img src="http://stas-melnikov.ru/cliparts/notebook3_640x640.jpg" class="list-works__img" alt="Work" />
 					<div class="list-works__overlay"> 
-						<span class="name-project">Responsive modal window</span>
+						<span class="list-works__name-project">Responsive modal window</span>
 					</div>
 				</a>
-				<a href="http://stas-melnikov.ru/responsive_elements/" target="blank" class="list-works__item display-ib-container__item">
+				<a href="http://stas-melnikov.ru/responsive_elements/" target="blank" class="list-works__item display-ib-box__item">
 					<img src="http://stas-melnikov.ru/cliparts/notebook3_640x640.jpg" class="list-works__img" alt="Work" />
 					<div class="list-works__overlay"> 
-						<span class="name-project">Responsive Framework</span>
+						<span class="list-works__name-project">Responsive Framework</span>
 					</div>
 				</a>
-				<a href="http://stas-melnikov.ru/iphone/" target="blank" class="list-works__item display-ib-container__item">
+				<a href="http://stas-melnikov.ru/iphone/" target="blank" class="list-works__item display-ib-box__item">
 					<img src="http://stas-melnikov.ru/cliparts/notebook_640x640.jpg" class="list-works__img" alt="Work" />
 					<div class="list-works__overlay"> 
-						<span class="name-project">3D model Iphone</span>
+						<span class="list-works__name-project">3D model Iphone</span>
 					</div>
 				</a>
-				<a href="http://stas-melnikov.ru/car/" target="blank" class="list-works__item display-ib-container__item">
+				<a href="http://stas-melnikov.ru/car/" target="blank" class="list-works__item display-ib-box__item">
 					<img src="http://stas-melnikov.ru/cliparts/notebook2_640x640.jpg" class="list-works__img" alt="Work" />
 					<div class="list-works__overlay"> 
-						<span class="name-project">3D model Nissan</span>
+						<span class="list-works__name-project">3D model Nissan</span>
 					</div>
 				</a>
 			</div>	
 		</div>	
 	</section>
 	<section id="blog" class="wrapper">
-		<div class="container">
+		<div class="container content">
 			<h2 class="title">Blog</h2>
-			<div class="posts display-ib-container_2columns">
+			<div class="posts display-ib-box_2columns">
 				<article class="article">
 					<h2 class="article__title">
-						<a href="http://stas-melnikov.ru/en/magic_layout.html" target="_blank" class="article__readmore">Magic layout - JQuery plugin for animate blocks</a>
+						<a href="http://http://blog.stas-melnikov.ru/magic_layout.html" target="_blank" class="article__readmore">Magic layout - JQuery plugin for animate blocks</a>
 					</h2>
-					<a href="http://stas-melnikov.ru/en/magic_layout.html" target="_blank">
+					<a href="http://http://blog.stas-melnikov.ru/magic_layout.html" target="_blank">
 						<img class="article__img" src="http://stas-melnikov.ru/cliparts/notebook3_1200x800.jpg" alt="project" /> 
 					</a>
 					<div class="article__date">
@@ -183,7 +183,7 @@
 						</div>
 					</div>
 				</article>
-				<article class="article display-ib-container__item">
+				<article class="article display-ib-box__item">
 					<a href="http://stas-melnikov.ru/library-of-plugins/" target="_blank">
 						<img class="article__img" src="http://stas-melnikov.ru/cliparts/clipart_1200x800.jpg" alt="project" /> 
 					</a>
@@ -216,7 +216,7 @@
 						</p>
 					</div>
 				</article>
-				<article class="article display-ib-container__item">
+				<article class="article display-ib-box__item">
 					<a href="http://stas-melnikov.ru/material_bootstrap_theme/" target="_blank">
 						<img class="article__img" src="http://stas-melnikov.ru/cliparts/notebook_1200x800.jpg" alt="project" /> 
 					</a>
@@ -255,16 +255,19 @@
 			<h3 class="title_middle">Address:</h3>
 			<p>DevLab Pro, Russian Federation, Penza, Karla Marks 16</p>
 		</section>
-		<div id="map"></div>
+		<div id="map" class="contacts__map"></div>
 	</div>
 	<footer class="footer">
-		<a href="https://www.paypal.me/melnik909" target="blank" style="display: block;float: left; margin: 0 15px 10px 0;padding: 8px 15px; border:1px solid #fff; color: #fff;border-radius: 5px;cursor: pointer;background-color: rgba(0,0,0,0)">Donate</a>
-		<div class="social footer__left-column">
-			<div class="yashare-auto-init" data-yashareL10n="en" data-yashareType="small" data-yashareQuickServices="facebook,twitter,gplus" data-yashareTheme="counter"></div>
-		</div>
-		<div class="footer__right-column">
-			<a href="https://www.linkedin.com/in/melnik909" class="footer__link" target="blank">Developed by Stas Melnikov</a>
-		</div>
+		<div class="container">
+			<div class="social footer__left-column">
+				<div class="yashare-auto-init" data-yashareL10n="en" data-yashareType="small" data-yashareQuickServices="facebook,twitter,gplus" data-yashareTheme="counter"></div>
+			</div>
+			<div class="footer__right-column">
+				<a href="https://www.paypal.me/melnik909" target="blank" style="display: inline-block; margin-bottom: 10px; padding: 8px 15px; border:1px solid #fff; color: #fff;border-radius: 5px;cursor: pointer;background-color: rgba(0,0,0,0)">Donate</a>
+				<br>
+				<a href="https://www.linkedin.com/in/melnik909" class="footer__link" target="blank">Developed by Stas Melnikov</a>
+			</div>
+		</div>	
 	</footer>
 	<div class="mpc_preloader">
 		<div class="mpc_preloader9"></div>
@@ -294,6 +297,7 @@
 (function(){
 
 	var scripts = [
+
 		{
 			src: "//yastatic.net/share/share.js",
 			async: true,
@@ -302,22 +306,20 @@
 			src : "../../metrika.js",
 			async: true,
 		}
-		
-	],
-	
-	scripts_len = scripts.length;
+	];
 
-	window.addEventListener('load', init(scripts));
 	
-	function init(scripts){
+	window.addEventListener('load', init);
+	
+	function init(){
 	
 		var script;
 		
 		setTimeout(function(){
 		
 			if(window.outerWidth > 640){
-
-				for(var i = 0; i < scripts_len; i++){
+			
+				for(var i = 0, scripts_len = scripts.length; i < scripts_len; i++){
 				
 					script = document.createElement("script");
 					script.src = scripts[i].src;
@@ -329,6 +331,6 @@
 		},600);
 	}
 })();
-</script> 
+</script>
 </body>
 </html>
