--- a/README.html
+++ b/README.html
@@ -3,11 +3,9 @@
 the modern of the requirement. In case of creation were used next technologies were used: HTML5, CSS3. Also in it
 the responsive grid, css3 animation and many other components are included. It is prepared documentation is qualitative,
 which will help you to use it.</p>
-<h1 id="demo">DEMO</h1>
-<p><a href="http://stas-melnikov.ru/themes/responsive_ux_template">http://stas-melnikov.ru/themes/responsive_ux_template</a></p>
-<h1 id="help-donate-">Help(Donate)</h1>
-<p>If you liked this theme, please donate to me to steam of dollars. I very need your help. Thanks!</p>
-<h1 id="browsers">Browsers</h1>
+<h2 id="donate">Donate</h2>
+<p>If you liked this theme, please donate to me on <a href="https://www.paypal.me/melnik909" target="blank">PayPal</a> or contact me. Thanks!</p>
+<h2 id="browsers">Browsers</h2>
 <p>IE10+, Opera, Safari, Yandex browser, Chrome, Firefox, Mobile Safari, Android</p>
-<h1 id="license">License</h1>
+<h2 id="license">License</h2>
 <p>MIT</p>
